force-app/main/default/objects/Onboarding_Task_Template__mdt/Onboarding_Task_Template__mdt.object-meta.xml
<CustomObject>
    <description>Template records that define default onboarding tasks. Queried at runtime to auto-generate tasks when a new Onboarding Request is created. Replaces hardcoded task logic in OnboardingService.</description>
    <label>Onboarding Task Template</label>
    <pluralLabel>Onboarding Task Templates</pluralLabel>
</CustomObject>