force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Days_Offset__c.field-meta.xml
<CustomField>
    <fullName>Days_Offset__c</fullName>
    <label>Days Offset from Start Date</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>