force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department (blank = all)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>