force-app/main/default/objects/Onboarding_Task_Template__mdt/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>